test_scores/negative_dimers/features/Q08AD1.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q08AD1.pkl.xz